edits to swagger and service
