# src/main/java/com/voicerecorder/controller/BucketStorageController.java
@@ -3,8 +3,7 @@ package com.voicerecorder.controller;
 
 import com.voicerecorder.entity.UserPhrase;
 import com.voicerecorder.entity.UserPhraseWithAudioFile;
-import com.voicerecorder.model.response.BucketResponse;
-import com.voicerecorder.service.S3Service;
+import com.voicerecorder.service.BucketStorageService;
 import com.voicerecorder.service.VoiceRecorderService;
 import io.minio.errors.*;
 import okhttp3.Response;
@@ -13,36 +12,26 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
 import java.util.Arrays;
 
 
 @RestController
-public class S3Controller {
+public class BucketStorageController {
 
     @Autowired
-    private S3Service s3Service;
+    private BucketStorageService bucketStorageService;
 
     @Autowired
     private VoiceRecorderService voiceRecorderService;
 
-    @GetMapping("/s3")
-    @ResponseBody
-    public ResponseEntity<String> getS3Buckets() throws ServerException, InsufficientDataException, ErrorResponseException, IOException, NoSuchAlgorithmException, InvalidKeyException, InvalidResponseException, XmlParserException, InternalException {
-        String result = s3Service.getBucket();
-        return ResponseEntity.ok(result);
-    }
-
     // POSTCONDITION: Client must also call updateUserPhrase with the proper Fi
     // le path from the return value.
-    @PostMapping("/v1/userPhrase/s3")
+    @PostMapping("/v1/file")
     @ResponseBody
-    public ResponseEntity<UserPhrase> saveAudioFileToS3(@RequestBody UserPhraseWithAudioFile userPhraseWithAudioFile) {
+    public ResponseEntity<UserPhrase> saveAudioFileToBucket(@RequestBody UserPhraseWithAudioFile userPhraseWithAudioFile) {
         UserPhrase result;
         try {
-            result = s3Service.saveAudioFileToS3(userPhraseWithAudioFile);
+            result = bucketStorageService.saveAudioFileToBucket(userPhraseWithAudioFile);
 
         } catch (Exception e ) {
             if (e instanceof FileNotFoundException) {
@@ -56,13 +45,13 @@ public class S3Controller {
 
     }
 
-    @PostMapping("/v1/file/s3")
+    @PostMapping("/v1/file/get")
     @ResponseBody
     public ResponseEntity<String> getFileFromBucket(@RequestBody String keypath) {
         byte[] response;
         try {
-            System.out.println("trying to fetch file from s3");
-             response = s3Service.getUserPhraseFromS3(keypath);
+            System.out.println("trying to fetch file from bucket");
+             response = bucketStorageService.getUserPhraseFromBucket(keypath);
 
         } catch (Exception e ) {
             if(e instanceof  ErrorResponseException) {
