# src/main/java/com/voicerecorder/model/PhraseRequest.java
@@ -1,0 +1,15 @@
+package com.voicerecorder.model;
+
+import lombok.*;
+
+@Getter
+@Setter
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@EqualsAndHashCode
+public class PhraseRequest {
+    private Long userId;
+    private Long phraseSetId;
+
+}
